--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
 					<div class="dragon-building"><img data-src="img/dcc-building.jpg" data-hq="dcc-building-hq.jpg" data-medium="img/dcc-building-1440.jpg" data-tablet="img/dcc-building-1024.jpg" data-mobile="img/dcc-building-640.jpg" alt="Dragon Building" class="bg-lq"></div>
 					<div class="dcc-plank">
 						<a href="#start" class="start-now">
-							<span class="off"><img src="img/start-a.jpg" alt="Click To Play"></span>
-							<span class="on"><img src="img/start-b.jpg" alt="Click To Play"></span>
-							<span class="on2x"><img src="img/start-c.jpg" alt="Click To Play"></span>
+							<span class="off"><img src="img/start-a.jpg" alt="Click To Play" width="500" height="218"></span>
+							<span class="on"><img src="img/start-b.jpg" alt="Click To Play" width="500" height="218"></span>
+							<span class="on2x"><img src="img/start-c.jpg" alt="Click To Play" width="500" height="218"></span>
 						</a>
 					</div>
 				</div>
 				<div class="predcc-zeppelin">
 					<div class="front-zeppelin">
-						<div class="zep-img"><img src="img/zeppelin.png" alt="Zeppelin"></div>
+						<div class="zep-img"><img src="img/zeppelin.png" alt="Zeppelin" width="500" height="202"></div>
 						<div class="zep-led"><a href="http://v1.dragoncapital.center/" title="Dragon Capital Center"><span class="monitor"></span></a></div>
 					</div>
 					<div class="back-zeppelin">
-						<img src="img/back-zeppelin.png" alt="Zeppelin">
+						<img src="img/back-zeppelin.png" alt="Zeppelin" width="200" height="143">
 					</div>
 				</div>
 			</div>
