--- a/index.html
+++ b/index.html
@@ -1197,7 +1197,7 @@
 												<p><span class="paragraph"></span></p>
 											</div>
 											<div class="skip-typed">
-												<p>Hi, FYI we just came back to mother earth to spread the news about what we have seen back in the future. So most probably what we are doing might not be something you have seen before.<br/>We know what you have thought.<br/>No, not that one, and not that one either.<br/>Curious?</p>
+												<p>Hi, we just came back to mother earth to spread what we have seen back in the future. What we are doing might not be something you have seen before.<br/>We know what you have thought.<br/>No, not that one, and not that one either.<br/>Curious?</p>
 											</div>
 											<div class="lobby-button-container">
 												<a class="btn-begin btn-meet-us rippling" title="Meet Us"><span><img src="img/meet-us-button.png" alt="Meet Us" width="100" height="100"></span></a>
