--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"> -->
+	<meta name="theme-color" content="#4AAAB8"/>
 	<title>Dragon Capital Center</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
@@ -867,7 +867,7 @@
 											<img src="img/dragoners/vic.png" alt="Vic" width="200" height="200">
 											<div class="details">
 												<h4>Victorio</h4>
-												<h5>The Mighty Thor</h5>
+												<h5>The Mighty "Tor"</h5>
 												<p>Strong and healthy is the first impression when we look at him, deep down inside his calmness lead and guide us to make a great product. From detailing every word to simplify complex technical problems. In a critical condition he is the hero who mediate people and listening on both side of a story. His leadership is what bind us together.</p>
 												<h6>Skills &amp; Special Attribute</h6>
 												<p>Power Augmentation, Innate Capability, Weather Manipulation, Various Natural Phenomena, Omnipresence</p>
