--- a/index.html
+++ b/index.html
@@ -1201,7 +1201,7 @@
 											</div>
 											<div class="lobby-button-container">
 												<a class="btn-begin btn-meet-us rippling" title="Meet Us"><span><img src="img/meet-us-button.png" alt="Meet Us" width="100" height="100"></span></a>
-												<a class="btn-begin btn-watch-us rippling" title="Watch Us"><span><img src="img/watch-us-button.png" alt="Watch Us" width="100" height="100"></span></a>
+												<!-- <a class="btn-begin btn-watch-us rippling" title="Watch Us"><span><img src="img/watch-us-button.png" alt="Watch Us" width="100" height="100"></span></a> -->
 											</div>
 											
 										</div>
@@ -1233,11 +1233,11 @@
 		<div class="nav down"><a href="#prev"><span class="fa fa-chevron-down"></span></a></div>
 	</footer>
 
-	<div class="watchus-popup">
+	<!-- <div class="watchus-popup">
 		<div class="wp-wrapper">
 			<div class="wp-container"></div>
 		</div>
-	</div>
+	</div> -->
 
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/jquery.parallax.min.js"></script>
