--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="theme-color" content="#4AAAB8"/>
+	<meta name="theme-color" content="#06899D"/>
 	<title>Dragon Capital Center</title>
 	<meta name="title" content="Dragon Capital Center" />
 	<meta name="description" content="Hi, we just came back to mother earth to spread what we have seen back in the future. What we are doing might not be something you have seen before. We know what you have thought. No, not that one, and not that one either. Curious?">
