--- a/index.html
+++ b/index.html
@@ -8,13 +8,27 @@
 	<meta name="title" content="Dragon Capital Center" />
 	<meta name="description" content="Hi, we just came back to mother earth to spread what we have seen back in the future. What we are doing might not be something you have seen before. We know what you have thought. No, not that one, and not that one either. Curious?">
 	<meta name="keywords" content="dragon,capital,center,startup,dcc"/>
+
+	<meta name="author" content="Dragon Capital Center">
+	<link rel="author" href="https://plus.google.com/u/0/110270446180309877178">
+	<!-- <link rel="shortcut icon" href="http://vahn.me/favicon.ico"/> -->
+	
+	<link rel="canonical" href="http://dragoncapital.center" />
+	<meta property="og:locale" content="en_US" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="Dragon Capital Center" />
+	<meta property="og:description" content="Hi, we just came back to mother earth to spread what we have seen back in the future. What we are doing might not be something you have seen before. We know what you have thought. No, not that one, and not that one either. Curious?" />
+	<meta property="og:image" content="http://dragoncapital.center/img/capital.jpg" />
+	<meta property="og:url" content="http://dragoncapital.center" />
+	<meta property="og:site_name" content="Dragon Capital Center" />
+	<meta name="twitter:card" content="summary_large_image"/>
+	<meta name="twitter:description" content="Hi, we just came back to mother earth to spread what we have seen back in the future. What we are doing might not be something you have seen before. We know what you have thought. No, not that one, and not that one either. Curious?"/>
+	<meta name="twitter:title" content="Dragon Capital Center"/>
+	<meta name="twitter:site" content="@dragoncapitalid"/>
+	<meta name="twitter:domain" content="dragoncapitalid"/>
+
 	<script type="text/javascript" src="js/modernizr.js"></script>
-	<script type="text/javascript" src="js/fastclick.js"></script>
-	<script type="application/javascript">
-		window.addEventListener('load', function() {
-			new FastClick(document.body);
-		}, false);
-	</script>
+	
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/fontface.css">
 	<link rel="stylesheet" type="text/css" href="css/cframe.min.css">
@@ -56,7 +70,7 @@
 					<ul>
 						<li><a href="https://www.facebook.com/dragoncapitalid" target="_blank" title="Follow us on Facebook"><span class="fa fa-facebook"></span></a></li>
 						<li><a href="https://twitter.com/@dragoncapitalID" target="_blank" title="Follow us on Twitter"><span class="fa fa-twitter"></span></a></li>
-						<li><a href="https://plus.google.com/u/0/117935779617495492644/about" target="_blank" title="Follow us on Google+"><span class="fa fa-google-plus"></span></a></li>
+						<li><a href="https://www.youtube.com/channel/UCVlm9kvczsCvGaKcBBqT76g" target="_blank" title="Follow us on Youtube"><span class="fa fa-youtube-play"></span></a></li>
 						<li><a href="https://www.linkedin.com/in/dragoncapital" target="_blank" title="Follow us on Linked In"><span class="fa fa-linkedin"></span></a></li>
 					</ul>
 					<div class="copyright">&copy;2015 Dragon Capital Center.<br>All Rights Reserved.</div>
@@ -1105,7 +1119,7 @@
 											<div class="details">
 												<h4>Donny</h4>
 												<h5>The Philosopher</h5>
-												<p>A law alumni but fell in love with design and technology 15 years ago. His personal interests are all about live, social, law, music, and creative industry. Originated from a small, old-fashioned, but lovely town, Yogyakarta, he happily ended up here with us. His role is to play around with tons of codes and beauty to make cool apps.</p>
+												<p>A law alumni but fell in love with design and technology 15 years ago. His personal interests are all about live, social, law, music, and creative industry. Originated from a small, old-fashioned, but lovely town, Yogyakarta. His role is to play around with tons of codes and beauty to make cool apps.</p>
 												<h6>Skills &amp; Special Attribute</h6>
 												<p>UX Expert, SEO, Advanced Coder, Logical Warrior, Thinker</p>
 											</div>
@@ -1202,7 +1216,7 @@
 											</div>
 											<div class="lobby-button-container">
 												<a class="btn-begin btn-meet-us rippling" title="Meet Us"><span><img src="img/meet-us-button.png" alt="Meet Us" width="100" height="100"></span></a>
-												<!-- <a class="btn-begin btn-watch-us rippling" title="Watch Us"><span><img src="img/watch-us-button.png" alt="Watch Us" width="100" height="100"></span></a> -->
+												<a class="btn-begin btn-watch-us rippling" title="Watch Us"><span><img src="img/watch-us-button.png" alt="Watch Us" width="100" height="100"></span></a>
 											</div>
 											
 										</div>
@@ -1234,12 +1248,18 @@
 		<div class="nav down"><a href="#prev"><span class="fa fa-chevron-down"></span></a></div>
 	</footer>
 
-	<!-- <div class="watchus-popup">
+	<div class="watchus-popup">
 		<div class="wp-wrapper">
 			<div class="wp-container"></div>
 		</div>
-	</div> -->
-
+	</div>
+	
+	<script type="text/javascript" src="js/fastclick.js"></script>
+	<script type="application/javascript">
+		window.addEventListener('load', function() {
+			new FastClick(document.body);
+		}, false);
+	</script>
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/jquery.parallax.min.js"></script>
 	<script type="text/javascript" src="js/iscroll.js"></script>
@@ -1248,14 +1268,14 @@
 	<script type="text/javascript" src="js/perfect-scrollbar.jquery.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	<script async="async">
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-67806983-1', 'auto');
-  ga('send', 'pageview');
+		ga('create', 'UA-67806983-1', 'auto');
+		ga('send', 'pageview');
 
-</script>
+	</script>
 </body>
 </html>
