--- a/index.html
+++ b/index.html
@@ -5,25 +5,37 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#06899D"/>
 	<title>Dragon Capital Center</title>
-	<meta name="title" content="Dragon Capital Center" />
-	<meta name="description" content="Hi, we just came back to mother earth to spread what we have seen back in the future. What we are doing might not be something you have seen before. We know what you have thought. No, not that one, and not that one either. Curious?">
-	<meta name="keywords" content="dragon,capital,center,startup,dcc"/>
+	<meta name="title" content="Dragon Capital Center | Startup + Fun" />
+	<meta name="description" content="It's a team where creative genius people work, cry, laugh and play together to invent something. Something useful for people, for life. Something that couldn't be anywhere else.">
+	<meta name="keywords" content="dragon,capital,center,startup,dcc,fun,playful,chips,cookie,coco,nano,data,mining"/>
 
 	<meta name="author" content="Dragon Capital Center">
 	<link rel="author" href="https://plus.google.com/u/0/110270446180309877178">
-	<!-- <link rel="shortcut icon" href="http://vahn.me/favicon.ico"/> -->
+	
+	<link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="/img/favicon.ico">
+	<link rel="apple-touch-icon" sizes="57x57" href="/img/favicon-57.png">
+	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="/img/favicon-57.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/img/favicon-72.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/img/favicon-114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/img/favicon-120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/img/favicon-144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/img/favicon-152.png">
+	<meta name="application-name" content="Dragon Capital Center">
+	<meta name="msapplication-TileImage" content="/img/favicon-144.png">
+	<meta name="msapplication-TileColor" content="#06899D">
+
 	
 	<link rel="canonical" href="http://dragoncapital.center" />
 	<meta property="og:locale" content="en_US" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Dragon Capital Center" />
-	<meta property="og:description" content="Hi, we just came back to mother earth to spread what we have seen back in the future. What we are doing might not be something you have seen before. We know what you have thought. No, not that one, and not that one either. Curious?" />
-	<meta property="og:image" content="http://dragoncapital.center/img/capital.jpg" />
+	<meta property="og:title" content="Dragon Capital Center | Startup + Fun" />
+	<meta property="og:description" content="It's a team where creative genius people work, cry, laugh and play together to invent something. Something useful for people, for life. Something that couldn't be anywhere else." />
+	<meta property="og:image" content="http://dragoncapital.center/img/dragoncapital.jpg" />
 	<meta property="og:url" content="http://dragoncapital.center" />
 	<meta property="og:site_name" content="Dragon Capital Center" />
 	<meta name="twitter:card" content="summary_large_image"/>
-	<meta name="twitter:description" content="Hi, we just came back to mother earth to spread what we have seen back in the future. What we are doing might not be something you have seen before. We know what you have thought. No, not that one, and not that one either. Curious?"/>
-	<meta name="twitter:title" content="Dragon Capital Center"/>
+	<meta name="twitter:description" content="It's a team where creative genius people work, cry, laugh and play together to invent something. Something useful for people, for life. Something that couldn't be anywhere else."/>
+	<meta name="twitter:title" content="Dragon Capital Center | Startup + Fun"/>
 	<meta name="twitter:site" content="@dragoncapitalid"/>
 	<meta name="twitter:domain" content="dragoncapitalid"/>
 
@@ -146,7 +158,7 @@
 														<div id="dragon-ios-developer" class="reveal">
 															<div class="hiring-content">
 																<h3>IOS Programmer</h3>
-																<p>If you are an apple geek, then you might be the one we want to hire. Needless to say, we assume you already know what you are doing. It is a religion, it is a way of life, IOS programmers dedicate their life in achieving the best way to build apple apps so that human races can enjoy Job’s legacy.</p>
+																<p>If you are an apple geek, then you might be the one we want to hire. Needless to say, we assume you already know what you are doing. It is a religion, it is a way of life, IOS programmers dedicate their life in achieving the best way to build apple apps so that human races can enjoy Job's legacy.</p>
 																<p>You must aware of the new technology around Cupertino, all the time. Your passion to learn is as much as big as your passion to share with others.</p>
 																<h6>Requirement</h6>
 																<p>Max.35 yrs old | Cocoa &amp; Cocoa Touch | Xcode | Swift | Willing to share and learn | Idealistic and conceptive</p>
@@ -164,7 +176,7 @@
 															<div class="hiring-content">
 																<h3>Android Developer</h3>
 																<p>Talking android, you must have a clear idea of how Android is evolving through different versions. We at DCC believe that Android is first created to make life simple. Therefore becoming an Android Programmer is not only making synchronization with the web layout but also building a better one.</p>
-																<p>We are looking people who can make powerful applications that can change people’s life and can see the world from a different perspective.</p>
+																<p>We are looking people who can make powerful applications that can change people's life and can see the world from a different perspective.</p>
 																<h6>Requirement</h6>
 																<p>Max.35 yrs old | Android NDK | Android ADT | Eclipse IDE | Willing to share and learn | Idealistic and conceptive</p>
 															</div>
@@ -324,7 +336,7 @@
 															<div class="hiring-content">
 																<h3>Administrator</h3>
 																<p>Part of the job is to administer and moderate all the little things at our website and app. You decide who win, lose or draw. You decide which is right, which is wrong and which is which.</p>
-																<p>You are the judge when things can really become pre-judgemental and need a life-saving decision making. We don’t want you to play God, but in some cases you are.</p>
+																<p>You are the judge when things can really become pre-judgemental and need a life-saving decision making. We don't want you to play God, but in some cases you are.</p>
 																<h6>Requirement</h6>
 																<p>Max.30 years old | Internet Savvy</p>
 															</div>
@@ -399,7 +411,7 @@
 														<div id="dragon-2d-illustrator" class="reveal">
 															<div class="hiring-content">
 																<h3>Digital Illustrator</h3>
-																<p>Imagination is abstract and unlimited. Through illustration, all dreams and imaginations become true. You should be able to deliver the message with your artwork. You’re not alone, you can meet fellow illustrator who share the same passion.</p>
+																<p>Imagination is abstract and unlimited. Through illustration, all dreams and imaginations become true. You should be able to deliver the message with your artwork. You're not alone, you can meet fellow illustrator who share the same passion.</p>
 																<p>We look for people who are ridiculously creative, imaginative, have distinguished drawing skill, and willing to work as a team.</p>
 																<h6>Requirement</h6>
 																<p>Max. 35 years old | Great Wacom Skill | Great sense of Humour | Creative &amp; Fun</p>
@@ -416,8 +428,8 @@
 														<div id="dragon-3d-illustrator" class="reveal">
 															<div class="hiring-content">
 																<h3>3D Artist</h3>
-																<p>If you like to create an object from different perspective in digital world, then you might be the one we want to hire. You must be able to build 3D characters and environments that are based on the concept art. Create the models’ surfaces or skins, paint, wrap 2D textures, and lighting on a digital frame.</p>
-																<p>Don’t be afraid to explore your skill or execute great idea into your artwork. You can discover something new for the very first time and share with others who have same passion with you.</p>
+																<p>If you like to create an object from different perspective in digital world, then you might be the one we want to hire. You must be able to build 3D characters and environments that are based on the concept art. Create the models' surfaces or skins, paint, wrap 2D textures, and lighting on a digital frame.</p>
+																<p>Don't be afraid to explore your skill or execute great idea into your artwork. You can discover something new for the very first time and share with others who have same passion with you.</p>
 																<h6>Requirement</h6>
 																<p>Max. 35 years old | 3D Max/ Maya | Cinema 4D also be a great advantage | Good at texturing | Innovative</p>
 															</div>
@@ -492,8 +504,8 @@
 											<img src="img/dragoners/bebek.png" alt="Chips" width="200" height="200">
 											<div class="details">
 												<h4>Chips</h4>
-												<h5>D’Brainious</h5>
-												<p>Duck with banana.. that's it.... well it’s an affair, maybe we’ll tell you later about his background. Genius, arrogant and always have an evil plan to make people get away from him. He expresses his ingenuity by making an advanced tools to support all the plans he made. With all the advantages, Chips still need one thing to overcome the luck he doesn’t have.</p>
+												<h5>D'Brainious</h5>
+												<p>Duck with banana.. that's it.... well it's an affair, maybe we'll tell you later about his background. Genius, arrogant and always have an evil plan to make people get away from him. He expresses his ingenuity by making an advanced tools to support all the plans he made. With all the advantages, Chips still need one thing to overcome the luck he doesn't have.</p>
 												<h6>Skills &amp; Special Attribute</h6>
 												<p>Rarest Species, Lack Luck Duck, Genius</p>
 											</div>
@@ -715,7 +727,7 @@
 											<div class="details">
 												<h4>Coco</h4>
 												<h5>The Shoppingticated</h5>
-												<p>Coco is a lovely, cheerful and shopaholic bear who came from a wealthy family, raised in an urban environment makes Coco aware about style and fashions. Coco is an independent girl, she doesn’t get a lot of money from her parents, so she works as an actress to fulfill her desire to shop.</p>
+												<p>Coco is a lovely, cheerful and shopaholic bear who came from a wealthy family, raised in an urban environment makes Coco aware about style and fashions. Coco is an independent girl, she doesn't get a lot of money from her parents, so she works as an actress to fulfill her desire to shop.</p>
 												<h6>Skills &amp; Special Attribute</h6>
 												<p>Talkative, Friendly, Attention Seeker, Magical Purse</p>
 											</div>
@@ -785,7 +797,7 @@
 											<div class="details">
 												<h4>Corry</h4>
 												<h5>Dot Connector</h5>
-												<p>A fresh designer in the world of creative and digital industry. His task is to be the vessel of ideas from around him, and turn them into concepts based on user’s necessity. He likes to observe people and life, searching for pattern and asking questions. Outside the office hour, he is a runner and a reader. A few of his favorite things are fringes, wigs, and weird stuff.</p>
+												<p>A fresh designer in the world of creative and digital industry. His task is to be the vessel of ideas from around him, and turn them into concepts based on user's necessity. He likes to observe people and life, searching for pattern and asking questions. Outside the office hour, he is a runner and a reader. A few of his favorite things are fringes, wigs, and weird stuff.</p>
 												<h6>Skills &amp; Special Attribute</h6>
 												<p>Junior Polymath, Growth Mindset, Newbie Listener &amp; Your Lover</p>
 											</div>
@@ -827,7 +839,7 @@
 											<div class="details">
 												<h4>Borton</h4>
 												<h5>Nano Data Dracula</h5>
-												<p>He’s the crazy brain behind all of these, he pushes and makes us believe that there is nothing we can’t do, he is an optimist who makes us believe that this team can create and invent great things to serve and enhance the way people lives their life. His vision paving the long road we take in this journey. His experiences makes us aware of every obstacles ahead. His presence in this team is so important as he is both our friend and leader who always eat last and make us feel secure to take every risk.</p>
+												<p>He's the crazy brain behind all of these, he pushes and makes us believe that there is nothing we can't do, he is an optimist who makes us believe that this team can create and invent great things to serve and enhance the way people lives their life. His vision paving the long road we take in this journey. His experiences makes us aware of every obstacles ahead. His presence in this team is so important as he is both our friend and leader who always eat last and make us feel secure to take every risk.</p>
 												<h6>Skills &amp; Special Attribute</h6>
 												<p>Psychologicalist, Psychedelic, Time Traveller, Telekinesis, Steeple Chase Runner, Nano Data Engineering, User Interface, Experience Engineering, Right Brainer</p>
 											</div>
@@ -1007,7 +1019,7 @@
 											<div class="details">
 												<h4>Cookie</h4>
 												<h5>Incredible Cat-fish</h5>
-												<p>Eeeee… It’s not a hat, it's a fish, his best companion, we’ll let you know later why it’s there. Experience makes Cookie become a wise cat, he can not refuse people wishes, his love to help people often taken for granted and makes him look like a slavish cat. But he doesn’t care about it, he is still positive and sincere.</p>
+												<p>Eeeee… It's not a hat, it's a fish, his best companion, we'll let you know later why it's there. Experience makes Cookie become a wise cat, he can not refuse people wishes, his love to help people often taken for granted and makes him look like a slavish cat. But he doesn't care about it, he is still positive and sincere.</p>
 												<h6>Skills &amp; Special Attribute</h6>
 												<p>Heroic, Meditation Master, Loyal</p>
 											</div>
