--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 				<div class="predcc-zeppelin">
 					<div class="front-zeppelin">
 						<div class="zep-img"><img src="img/zeppelin.png" alt="Zeppelin" width="500" height="202"></div>
-						<div class="zep-led"><a href="http://dragoncapital.center/" title="Dragon Capital Center"><span class="monitor"></span></a></div>
+						<div class="zep-led"><a href="http://www.dragoncapital.center/v1" title="Dragon Capital Center V1a"><span class="monitor"></span></a></div>
 					</div>
 					<div class="back-zeppelin">
 						<img src="img/back-zeppelin.png" alt="Zeppelin" width="200" height="143">
