--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="theme-color" content="#06899D"/>
 	<title>Dragon Capital Center</title>
 	<meta name="title" content="Dragon Capital Center | Startup + Fun" />
-	<meta name="description" content="It's a team where creative genius people work, cry, laugh and play together to invent something. Something useful for people, for life. Something that couldn't be anywhere else.">
+	<meta name="description" content="It's a place where creative genius people work, laugh, play and grow together to invent something. Something useful for people and life. Something that couldn't be anywhere else.">
 	<meta name="keywords" content="dragon,capital,center,startup,dcc,fun,playful,chips,cookie,coco,nano,data,mining"/>
 
 	<meta name="author" content="Dragon Capital Center">
@@ -29,12 +29,12 @@
 	<meta property="og:locale" content="en_US" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Dragon Capital Center | Startup + Fun" />
-	<meta property="og:description" content="It's a team where creative genius people work, cry, laugh and play together to invent something. Something useful for people, for life. Something that couldn't be anywhere else." />
+	<meta property="og:description" content="It's a place where creative genius people work, laugh, play and grow together to invent something. Something useful for people and life. Something that couldn't be anywhere else." />
 	<meta property="og:image" content="http://dragoncapital.center/img/dragoncapital.jpg" />
 	<meta property="og:url" content="http://dragoncapital.center" />
 	<meta property="og:site_name" content="Dragon Capital Center" />
 	<meta name="twitter:card" content="summary_large_image"/>
-	<meta name="twitter:description" content="It's a team where creative genius people work, cry, laugh and play together to invent something. Something useful for people, for life. Something that couldn't be anywhere else."/>
+	<meta name="twitter:description" content="It's a place where creative genius people work, laugh, play and grow together to invent something. Something useful for people and life. Something that couldn't be anywhere else."/>
 	<meta name="twitter:title" content="Dragon Capital Center | Startup + Fun"/>
 	<meta name="twitter:site" content="@dragoncapitalid"/>
 	<meta name="twitter:domain" content="dragoncapitalid"/>
